[package]
name = "surtgis-relief-3d"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Native wgpu 3D viewer for SurtGis shaded relief"
keywords = ["gis", "3d", "wgpu", "webgpu", "visualization"]
categories = ["science::geo", "graphics", "rendering"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
surtgis-core = { version = "0.13", path = "../core", default-features = false }
surtgis-algorithms = { version = "0.13", path = "../algorithms", default-features = false }
surtgis-relief = { version = "0.13", path = "../relief", default-features = false }
surtgis-colormap = { version = "0.13", path = "../colormap", default-features = false }
# wgpu webgl feature: WebGPU is preferred on browsers that have it
# (Chrome stable, Edge); WebGL2 covers Firefox + Safari for now.
wgpu              = { version = "23", features = ["webgl"] }
bytemuck          = { version = "1", features = ["derive"] }
glam              = "0.29"
thiserror.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
winit             = "0.30"
pollster          = "0.4"
env_logger        = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
winit             = "0.30"
wasm-bindgen      = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
web-sys           = { version = "0.3", features = [
  "HtmlCanvasElement", "Window", "Document", "Element",
] }

[dev-dependencies]
surtgis-algorithms = { version = "0.13", path = "../algorithms" }
