[package]
name = "surtgis-relief-3d"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Native wgpu 3D viewer for SurtGis shaded relief"
keywords = ["gis", "3d", "wgpu", "webgpu", "visualization"]
categories = ["science::geo", "graphics", "rendering"]
# Distributed as a compiled binary, like `gui`: wgpu drags system libs, so
# it is excluded from default-members, the MSRV job and crates.io. Marked
# non-publishable so it stays out of the verified 1.0 published surface.
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
surtgis-core = { version = "0.18", path = "../core", default-features = false }
surtgis-algorithms = { version = "0.18", path = "../algorithms", default-features = false }
surtgis-relief = { version = "0.18", path = "../relief", default-features = false }
surtgis-colormap = { version = "0.18", path = "../colormap", default-features = false }
# wgpu webgl feature: WebGPU is preferred on browsers that have it
# (Chrome stable, Edge); WebGL2 covers Firefox + Safari for now.
#
# Pinned to 23, one major behind the wgpu 27 that `eframe`/`egui-wgpu`
# (via crates/gui) pulls in transitively — Cargo.lock carries both. Not
# aligned: wgpu breaks its device/surface/pipeline API on most major
# releases, and this crate has ~3800 lines across pipeline.rs, native.rs,
# web.rs, headless.rs and lod.rs calling `wgpu::` directly, so a 23→27 bump
# is a real migration, not a version-bump. `default-members` (workspace
# Cargo.toml) already keeps this crate out of everyday builds, which was
# judged the higher-value fix; revisit the wgpu bump as its own task.
wgpu              = { version = "23", features = ["webgl"] }
bytemuck          = { version = "1", features = ["derive"] }
glam              = "0.29"
thiserror.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
winit             = "0.30"
pollster          = "0.4"
env_logger        = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
winit             = "0.30"
wasm-bindgen      = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
web-sys           = { version = "0.3", features = [
  "HtmlCanvasElement", "Window", "Document", "Element",
] }

[dev-dependencies]
surtgis-algorithms = { version = "0.18", path = "../algorithms" }
