[package]
name = "surtgis-relief"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shaded-relief and hillshade compositing for SurtGis (rayshader-style)"
keywords = ["gis", "hillshade", "relief", "visualization", "terrain"]
categories = ["science::geo", "graphics"]

[dependencies]
surtgis-core = { version = "0.13", path = "../core", default-features = false }
surtgis-algorithms = { version = "0.13", path = "../algorithms", default-features = false }
surtgis-colormap = { version = "0.13", path = "../colormap", default-features = false }
ndarray.workspace = true
num-traits.workspace = true
thiserror.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon.workspace = true
