[package]
name = "surtgis-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly bindings for SurtGis geospatial algorithms"
keywords = ["gis", "wasm", "webassembly", "geospatial"]
categories = ["science::geo", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
surtgis-core = { version = "0.5.0", path = "../core", default-features = false }
surtgis-algorithms = { version = "0.5.0", path = "../algorithms", default-features = false }
wasm-bindgen.workspace = true
js-sys.workspace = true
serde.workspace = true
serde_json.workspace = true
