[package]
name = "surtgis-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly bindings for SurtGis geospatial algorithms"
keywords = ["gis", "wasm", "webassembly", "geospatial"]
categories = ["science::geo", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
surtgis-core = { version = "1.0", path = "../core", default-features = false }
surtgis-algorithms = { version = "1.0", path = "../algorithms", default-features = false, features = [
    "unstable",
] }
surtgis-relief = { version = "1.0", path = "../relief" }
surtgis-colormap = { version = "1.0", path = "../colormap" }
wasm-bindgen.workspace = true
js-sys.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
wasm-bindgen-test.workspace = true
